[tool.poetry]
name = "ahc-template"
version = "0.4.2"
description = ""
authors = ["hitonanode <32937551+hitonanode@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyyaml = "^6.0.2"
online-judge-tools = "^11.5.1"
optuna = "^4.2.0"
google-api-python-client = "^2.160.0"
gspread = "^6.1.4"
gspread-dataframe = "^4.0.0"
pandas-stubs = "^2.0.2.230605"
plotly = "^6.0.0"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.4"
types-pyyaml = "^6.0.12.20241230"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
target-version = "py311"
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
